<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        app:cardCornerRadius="5dp"
        android:layout_margin="3dp"
        android:layout_height="90dp"
        app:cardBackgroundColor="@color/black">

        <ImageView
            android:id="@+id/iv_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:maxLines="3"
            android:text="@string/long_text"
            android:textAlignment="textStart"
            android:ellipsize="end"
            android:textColor="@color/white" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_time"
                android:textColor="@color/light_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:text="@string/text_with_bullets"
                android:textColor="@color/light_white"/>

            <TextView
                android:id="@+id/tv_resolution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resolution"
                android:textColor="@color/light_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:text="@string/text_with_bullets"
                android:textColor="@color/light_white"/>

            <TextView
                android:id="@+id/tv_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_size"
                android:ellipsize="end"
                android:textColor="@color/light_white" />
        </LinearLayout>

    </LinearLayout>
    
    <ImageView
        android:id="@+id/iv_videoMenu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_more"/>

</LinearLayout>